src/test/resources/etapa4/failing/wrongIfCond.ru
struct A{
}
impl A{
    .(){}
    fn metodo1 (Str f) -> void {
        if(f*9){
            ;
        }
    }
}

start {}